--- a/index.html
+++ b/index.html
@@ -163,6 +163,22 @@ Triki Team" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
 
+    	<!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://www.atletismosantiago.club/index.html">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Club Atletismo Santiago">
+        <meta property="og:description" content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas.">
+        <meta property="og:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
+
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="atletismosantiago.club">
+        <meta property="twitter:url" content="https://www.atletismosantiago.club/index.html">
+        <meta name="twitter:title" content="Club Atletismo Santiago">
+        <meta name="twitter:description" content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas.">
+        <meta name="twitter:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
+
+
 
 
 
