--- a/records_club.html
+++ b/records_club.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="icon" type="image/x-icon" href="favicon.svg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -20,9 +20,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Club Atletismo Santiago</title>
-    <meta name="title" content="Atletismo Santiago | Club de Atletismo de Galicia" />
+    <meta name="title" content="Records del Club | Atletismo Santiago" />
     <meta name="description"
-        content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas." />
+        content="Records de los atletas del club en las diferentes competiciones. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas." />
     <meta name="keywords" content="CAS,Club Atletismo Santiago, Atletismo Santiago, Club Atletismo, Atletismo,AtletismoSantiago,ClubAtletismoSantiago,AtletismoGalego,FederacionGalegaAtletismo,FederacionGallegaAtletismo,FGA,GaliciaAtletismo,CarreirasGalegas,AtletismoGallego,PistaCubierta,PistaCuberta,PistaAireLibre,PistaAlAireLibre,PistaCorta,PistaCurta,CampeonatoGallegoAtletismo,CrossGalicia,TrailGalicia,Galicia,AtletismoCoruna,AtletismoLugo,AtletismoOurense,AtletismoPontevedra,AtletismoVigo,CorrerEnGalicia,RunningSantiago,DeporteGallego,RunnersGalicia,AtletismoGalicia,CorrerEnCompostela,RunnersCompostela,AtletasGallegos,SantiagoRunners,GaliciaEnForma,CarreraPopularSantiago,CarreraPedestreSantiago,SantYago10k,SantYago,Corresan,ConcelloSantiago,RunGallego,AtletismoEspaña,EntrenamientoAtletismo,CorrerEsVida,AtletismoJuvenil,AtletismoFemenino,CompostelaRunnersClub,GaliciaActiva,ViveElDeporteGallego,CorrerPorSalud,EntrenamientoGallego,AtletismoPopular,RunSantiagoRun,AtletismoCoruña,GaliciaRunnersClub,RunGallegoRun,SantiagoDeporte,CarreraGallega,CorrerEnSantiagoDeCompostela,AtletismoCorredores,ClubDeportivoSantiago,RunnersVigo,GaliciaRun,EntrenamientoDeAtletismo,CorrerGallego,SantiagoRunClub,DeporteCompostela,CaminodeSantiagoRunning,AtletismoInfantil,CorrerPorGalicia,RunnersJuveniles,DeporteSantiagués,GaliciaSaludable,AtletismoViral,CorrerConPasión,SantiagoRunnersLife,GaliciaEnCarrera,AtletismoGallegoRun,RunnersCoruña,CorrerSantiagoGalicia,SantiagoRunnersCommunity,ClubAtletismoGallego,RutasDeRunningSantiago,DeporteCoruña,AtletismoCoruñés,CorrerEnGallego,SantiagoTrailRunning,RunningGallego,CarreraAtletismoSantiago,GaliciaRunnersLife,ClubAtletismoCoruña,SantiagoAtletismoActivo,CorrerEnEquipo,AtletismoConPasión,GaliciaRunAndFun,RunningSantiagoDeCompostela,AtletismoCorrerVivir,SantiagoRunnersFamily,GaliciaRunnersChallenge,CorrerEsVivirGalicia,AtletismoSantiagoRunClub,RutasDeAtletismoGallego,PistaAtletismoGalicia,CampeonatoGallegoAtletismo,CompeticionesAtletismoSantiago,PistaYCampoGalicia,SantiagoCompeticionesAtletismo,GaliciaRunnerChallenge,CampeonatoGallegoPista,AtletismoSantiagoCompetición,GaliciaRunnersChampionship,SantiagoPistaAtletismo,CampeonatoAtletismoCoruña,GaliciaTrackAndField,CompeticionesDeportivasSantiago,AtletismoGallegoChampion,CampeonatoGallegoRunning,PistaAtletismoCoruña,CompetenciasGallegasSantiago,GaliciaAtletismoChallenge,SantiagoCampeonatoAtletismo,CampeonatoGallegoRunner,AtletismoEnPistaGallega,GaliciaAthleticsChampion,SantiagoRunningCompetition,CampeonatoGallegoRunners,PistaAtletismoSantiagoGalicia,Running,Runners,Run,Correr,Corredores,ComoEmpezarACorrer,NiñosCorrer,NenosAtletismo,AtletismoSub18,AtletismoSub20,AtletismoSub23,AtletismoSub16, EscuelaAtletismo,A.D. Fogar Carballo,
 A.D. Rego do Lobo,
 AD Fogar Carballo – Oleiros,
@@ -160,7 +160,10 @@ Triki Team" />
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Atletismo Santiago" />
 
-    <link rel="canonical" href="https://atletismosantiago.club/" />
+    <meta property="og:image" content="https://www.atletismosantiago.club/img/estadisticas.webp">
+    <meta name="twitter:image" content="https://www.atletismosantiago.club/img/estadisticas.webp">
+
+
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
