--- a/index.html
+++ b/index.html
@@ -162,20 +162,22 @@ Triki Team" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
 
-    	<!-- Facebook Meta Tags -->
-        <meta property="og:url" content="https://www.atletismosantiago.club/index.html">
-        <meta property="og:type" content="website">
-        <meta property="og:title" content="Club Atletismo Santiago">
-        <meta property="og:description" content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas.">
-        <meta property="og:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.atletismosantiago.club/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Club Atletismo Santiago">
+    <meta property="og:description"
+        content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas.">
+    <meta property="og:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
 
-        <!-- Twitter Meta Tags -->
-        <meta name="twitter:card" content="summary_large_image">
-        <meta property="twitter:domain" content="atletismosantiago.club">
-        <meta property="twitter:url" content="https://www.atletismosantiago.club/index.html">
-        <meta name="twitter:title" content="Club Atletismo Santiago">
-        <meta name="twitter:description" content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas.">
-        <meta name="twitter:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="atletismosantiago.club">
+    <meta property="twitter:url" content="https://www.atletismosantiago.club/index.html">
+    <meta name="twitter:title" content="Club Atletismo Santiago">
+    <meta name="twitter:description"
+        content="Competiciones de Aire Libre, Pista Corta, Carreras Populares y Cross. Club adscrito a la Federación Gallega de Atletismo (FGA). Entrena con nosotros | Hecho por atletas para atletas.">
+    <meta name="twitter:image" content="https://www.atletismosantiago.club/img/bg_banner1.webp">
 
 
     <link rel="icon" href="https://www.atletismosantiago.club/favicon.ico">
@@ -194,9 +196,10 @@ Triki Team" />
                     <p> <i class='bx bxs-phone-call'></i> +34 618127115</p>
                 </div>
                 <div class="col-auto social-icons">
-                    <a href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES" aria-label="Facebook de Atletismo Santiago"><i
-                            class='bx bxl-facebook'></i></a>
-                    <a href="https://www.instagram.com/atletismosantiago/?hl=es" aria-label="Instagram del AtletismoSantiago"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES"
+                        aria-label="Facebook de Atletismo Santiago"><i class='bx bxl-facebook'></i></a>
+                    <a href="https://www.instagram.com/atletismosantiago/?hl=es"
+                        aria-label="Instagram del AtletismoSantiago"><i class='bx bxl-instagram'></i></a>
                 </div>
             </div>
         </div>
@@ -220,22 +223,24 @@ Triki Team" />
                         <a href="./index.html" class="nav-link">Inicio</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href=""   role="button"
-                            data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Club
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="./historia.html">Historia</a></li>
                             <li><a class="dropdown-item"
                                     href="https://swimburger-cas-app-demo.web.app/forms/licencia">Licencias</a></li>
+                            <li><a class="dropdown-item"
+                                    href="./noticias.html">Últimas Noticias</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
                         <a href="./calendario.html" class="nav-link">Calendario</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href=""   role="button"
-                            data-toggle="dropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="dropdown"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             Estadísticas
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -436,14 +441,15 @@ Triki Team" />
             </div>
 
             <div class="col-lg-5 ">
-                <img src="img/estadisticas.webp" data-src="img/estadisticas.webp" loading="lazy" style="width: 60%; margin-left: 25%;" alt="Estadisticas">
+                <img src="img/estadisticas.webp" data-src="img/estadisticas.webp" loading="lazy"
+                    style="width: 60%; margin-left: 25%;" alt="Estadisticas">
             </div>
         </div>
     </div>
 
 
 
-
+    <!-- 
     <div id="projects" class="mb-4" style="padding-top: 4rem;padding-bottom: 5%;background-color: #F0F6FF">
         <div class="container ">
             <div class="row">
@@ -596,7 +602,58 @@ Triki Team" />
 
         </div>
 
+    </div> -->
+
+    <div id="projects" style="padding-top: 4rem; padding-bottom: 4rem;background-color: #F0F6FF">
+        <div class="container ">
+            <div class="row">
+                <div class="text-center pb-4 wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: -5rem;">
+                    <h5 class="text-primary-gradient fw-medium">NOTICIAS</h5>
+                    <h1 class="mb-1">Últimas Noticias</h1>
+                    <br>
+                    <p>Conoce las últimas noticias del Club Atletismo Santiago en estos momentos</p>
+                    <hr class="divider" />
+                    <br>
+                </div>
+
+            </div>
+
+            <div id="noticias-container" class="row mt-5">
+                <p id="loading-message" style="text-align: center;font-weight: 700 !important;
+                color: #092932;font-size: large;">Cargando noticias, espera unos segundos...</p>
+
+            </div>
+
+
+
+            <!-- Modal para la noticia completa -->
+            <div class="modal fade" id="noticiaModal" tabindex="-1" role="dialog" aria-labelledby="noticiaModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="noticiaModalLabel">Noticia Completa</h5>
+                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div id="modal-body" class="modal-body">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
     </div>
+
+
+
 
 
     <div id="projects" style="padding-top: 4rem; padding-bottom:2rem;">
@@ -660,7 +717,8 @@ Triki Team" />
             </div>
             <div class="row">
                 <div class="col-12 mt-5">
-                    <img src="./img/patrocinadores.webp" ata-src="./img/patrocinadores.webp" loading="lazy" alt="Patrocinadores" style="width: 100%;">
+                    <img src="./img/patrocinadores.webp" ata-src="./img/patrocinadores.webp" loading="lazy"
+                        alt="Patrocinadores" style="width: 100%;">
                 </div>
             </div>
 
@@ -700,9 +758,11 @@ Triki Team" />
 
                         <li class="nav-item mb-2"><a href="https://swimburger-cas-app-demo.web.app/forms/licencia"
                                 class="nav-link p-0 text-muted">Inscripciones</a></li>
+                            
+                        <li class="nav-item mb-2"><a href="./noticias.html"
+                            class="nav-link p-0 text-muted">Últimas Noticias</a></li>
 
                     </ul>
-                    <br>
                     <h5>Estadísticas</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="./records_club.html" class="nav-link p-0 text-muted">Récords
@@ -739,11 +799,17 @@ Triki Team" />
                 </div>
             </div>
             <div class="d-flex flex-column flex-sm-row justify-content-between border-top text-center">
-                <p>&copy; 2024 Reservados todos los derechos. <a href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b" target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
-            
+                <p>&copy; 2024 Reservados todos los derechos. <a
+                        href="https://www.linkedin.com/in/%C3%B3scar-toimil-plaza/" style="color:#5e5b5b"
+                        target="_blank" rel="noopener noreferrer">Ó. Toimil</a>. &copy;</p>
+
                 <ul class="list-unstyled d-flex justify-content-center justify-content-sm-end mt-3 mt-sm-0">
-                    <li class="ms-4"><a class="bi bi-instagram link-dark d-none d-sm-inline" href="https://www.instagram.com/atletismosantiago/?hl=es" aria-label="Instagram de Atletismo Santiago"></a></li>
-                    <li class="ms-4"><a class="bi bi-facebook link-dark d-none d-sm-inline" href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES" aria-label="Facebook de Atletismo Santiago"></a></li>
+                    <li class="ms-4"><a class="bi bi-instagram link-dark d-none d-sm-inline"
+                            href="https://www.instagram.com/atletismosantiago/?hl=es"
+                            aria-label="Instagram de Atletismo Santiago"></a></li>
+                    <li class="ms-4"><a class="bi bi-facebook link-dark d-none d-sm-inline"
+                            href="https://www.facebook.com/clubatletismo.santiago/?locale=es_ES"
+                            aria-label="Facebook de Atletismo Santiago"></a></li>
                 </ul>
             </div>
 
@@ -758,6 +824,130 @@ Triki Team" />
     <script src="js/owl.carousel.min.js"></script>
 
     <script src="js/app.js"></script>
+
+
+    <script>
+        let noticiasData; // Variable global para almacenar los datos de noticias
+
+        // Cargar noticias desde el JSON
+        fetch('https://script.google.com/macros/s/AKfycbzgrxuBXoP_4uYBCKiWZWvf6LXjUy1Gp9gehHCHno-OrIpdHs1HB6kpoeLJ6yDLTcsGWg/exec')
+            .then(response => response.json())
+            .then(data => {
+                noticiasData = data.filter(noticia => noticia.ID !== "");
+                let cantidadNoticias;
+
+                // Determinar la cantidad de noticias según el tipo de dispositivo
+                if (window.innerWidth < 577) { // Móvil
+                    cantidadNoticias = 1;
+                } else if (window.innerWidth < 993) { // Tablet
+                    cantidadNoticias = 2;
+                } else { // Ordenador
+                    cantidadNoticias = 3;
+                }
+
+                mostrarNoticias(noticiasData, cantidadNoticias);
+                document.getElementById('loading-message').style.display = 'none';
+            })
+            .catch(error => {
+                // Manejar errores, por ejemplo, mostrar un mensaje de error
+                document.getElementById('loading-message').innerHTML = 'Error al cargar las noticias. Por favor, inténtelo de nuevo más tarde.';
+            });
+
+        function mostrarNoticias(noticias, cantidadMaxima) {
+            const noticiasContainer = document.getElementById('noticias-container');
+            const noticiasCargadas = noticiasContainer.querySelectorAll('.noticia-card').length;
+
+            // Ordenar las noticias por fecha en orden descendente
+            noticias.sort((a, b) => new Date(b.Fecha) - new Date(a.Fecha));
+
+            noticias.slice(noticiasCargadas, noticiasCargadas + cantidadMaxima).forEach(noticia => {
+                const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
+
+                const card = `
+            <div class="col-md-6 col-lg-4 mb-4 noticia-card">
+                <div class="card">
+                    <img src="${imagenUrl}" class="card-img-top" alt="${noticia.Titulo}">
+                    <div class="card-body">
+                        <h5 class="card-title" style="text-align: center;">${noticia.Titulo}</h5>
+                        <p class="card-text">${noticia.Contenido.substring(0, 150)}...</p>
+                        <div class="text-center">
+                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#noticiaModal" onclick="cargarNoticia('${noticia.ID}')">Leer más</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        `;
+                noticiasContainer.innerHTML += card;
+            });
+
+            // Mostrar el botón de cargar más si hay más noticias por cargar
+            if (noticiasCargadas + cantidadMaxima < noticias.length) {
+                const cargarMasButton = `
+            <div class="col-12 text-center mt-3">
+                <button class="btn btn-secondary cargar-mas-button" onclick="redirigirAotraWeb()">Ver más noticias</button>
+            </div>
+        `;
+                noticiasContainer.innerHTML += cargarMasButton;
+            } else {
+                const cargarMasButton = document.querySelector('.cargar-mas-button');
+                if (cargarMasButton) {
+                    cargarMasButton.style.display = 'none';
+                }
+            }
+        }
+
+        function cargarMasNoticias(cantidadMaxima) {
+            mostrarNoticias(noticiasData, cantidadMaxima);
+
+        }
+
+        function redirigirAotraWeb() {
+            window.location.href = 'https://atletismosantiago.club/noticias.html';
+        }
+
+        function cargarNoticia(ID) {
+
+            // Buscar la noticia con el ID indicado
+            let noticia;
+            for (let i = 0; i < noticiasData.length; i++) {
+                if (noticiasData[i].ID == ID) {
+                    noticia = noticiasData[i];
+                    break; // Importante: detener el bucle una vez que se ha encontrado la noticia
+                }
+            }
+            console.log(noticia);
+            // Convertir la cadena de fecha a un objeto Date
+            const fechaNueva = new Date(noticia.Fecha);
+
+            // Obtener los componentes de la fecha
+            const dia = fechaNueva.getDate();
+            const mes = fechaNueva.getMonth() + 1; // Sumar 1 porque los meses comienzan desde 0
+            const ano = fechaNueva.getFullYear();
+
+            // Formatear la fecha como "DD/MM/YYYY"
+            const fechaFormateada = `${dia}/${mes}/${ano}`;
+            const modalBody = document.getElementById('modal-body');
+            const imagenUrl = noticia.Imagen || 'https://www.atletismosantiago.club/img/bg_banner1.webp';
+
+            modalBody.innerHTML = `
+
+                <img src="${imagenUrl}" class="img-fluid mb-3" alt="${noticia.Titulo}">
+                <h5>${noticia.Titulo}</h5>
+                <p>${noticia.Contenido}</p>
+                <p><strong>Fecha:</strong> ${fechaFormateada}</p>
+            `;
+        }
+    </script>
+    <style>
+        #modal-body p {
+            white-space: pre-line;
+        }
+
+        .noticia-card .card-img-top {
+            width: 100%;
+            object-fit: cover;
+        }
+    </style>
 </body>
 
 </html>
